# IRIS

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  i18n.ts  main.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/configarc-core/: Cargo.toml
src-tauri/crates/configarc-core/scripts/: vhd-helper.ps1
src-tauri/crates/configarc-core/src/: error.rs  lib.rs  trusted.rs  vhd.rs
src-tauri/crates/configarc-core/src/config/: json_configs.rs  mod.rs  paths.rs  profiles.rs  segatools.rs  templates.rs
src-tauri/crates/configarc-core/src/games/: launcher.rs  mod.rs  model.rs  store.rs
src-tauri/src/: commands.rs  error.rs  main.rs  sync.rs  trusted.rs  vhd.rs
src-tauri/src/config/: mod.rs
src-tauri/src/fsdecrypt/: bootid.rs  crypto.rs  keys.rs  mod.rs
src-tauri/src/games/: mod.rs
src/api/: tauri.ts
src/types/: iris.ts
