[package]
name = "iris"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
configparser = "1.0.0"
configarc-core = { path = "crates/configarc-core" }
tauri = { version = "2.9.5", features = [] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
anyhow = "1.0.81"
binary-reader = "0.4.5"
cbc = { version = "0.1.2", features = ["std"] }
aes = "0.8.3"
crc32fast = "1.4.0"
hex = "0.4"
hex-literal = "0.4.1"
exfat-fs = "0.1.3"
ntfs = "0.4.0"
chrono = { version = "0.4", features = ["clock", "serde"] }

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }
