[package]
name = "configarc-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
configparser = "1.0.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "socks"] }
minisign-verify = "0.2.4"
sha2 = "0.10"
tempfile = "3.14"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
